Remove more future Java version features