@@ -82,7 +82,8 @@ public class BoundedContextUtilsImpl implements BoundedContextUtils {
 		newModule.getEntities().addAll(entitySimilarity.getSimilarEntities().stream()
 
 				// Map entity/duplicate mappings to a list of merged entities
-				.map(x -> mergeEntities(x.getEntity(), x.getSimilarEntity(), x.getFieldMap())).toList());
+				.map(x -> mergeEntities(x.getEntity(), x.getSimilarEntity(), x.getFieldMap()))
+				.collect(Collectors.toList()));
 
 		return newModule;
 	}
